--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+.slider {
+  height: 520px;
+  background-size: cover;
+  background-position: center;
+  max-width: 1200px;
+  margin: 22px auto 120px;
+  border-radius: 28px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +18,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.c1 {text-decoration: none; color:#000; text-align: center;}
+.c1:hover {color: green;}
+.start {
+  transform: scale(0);
+
+}
+.end {
+   transform: scale(1);
+   transition :all 0.5s;
 }
